<resources>
    <string name="app_name">Bookstore</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="language">Language</string>
    <string name="pages">Pages</string>
    <string name="price">Price</string>
    <string name="link">Link</string>
    <string name="view_book_activity_name">View book activity</string>
    <string name="search_action">Search</string>
    <string name="switch_view_action">Switch view</string>
    <string name="exit_action">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_book">View book</string>
</resources>
